--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "light/yii2-swagger": "~2.0.0-alpha"
+        "light/yii2-swagger": "~2.0.0-alpha",
+        "notamedia/yii2-sentry": "^1.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
