--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,14 @@
 {
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=7.2.0",
         "yiisoft/yii2": "~2.0.24",
         "yiisoft/yii2-bootstrap": "~2.0.10",
         "yiisoft/yii2-swiftmailer": "~2.1.0",
         "light/yii2-swagger": "~2.0.0-alpha",
-        "notamedia/yii2-sentry": "^1.3"
+        "notamedia/yii2-sentry": "^1.3",
+        "codemix/yii2-localeurls": "^1.7",
+        "dektrium/yii2-user": "^0.9.14"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
@@ -26,5 +28,13 @@
             "type": "composer",
             "url": "https://asset-packagist.org"
         }
-    ]
+    ],
+    "scripts": {
+        "post-update-cmd": [
+            "php yii migrate --migrationPath=@dektrium/yii2-user/migrations --interactive=0"
+        ],
+        "post-install-cmd": [
+            "php yii migrate --migrationPath=@dektrium/yii2-user/migrations --interactive=0"
+        ]
+    }
 }
