--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "light/yii2-swagger": "~2.0.0-alpha",
         "notamedia/yii2-sentry": "^1.3",
         "codemix/yii2-localeurls": "^1.7",
-        "dektrium/yii2-user": "^0.9.14"
+        "dektrium/yii2-user": "^0.9.14",
+        "yiisoft/yii2-queue": "^2.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
