Create queue job classes

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ phpunit.phar
 
 # Persistent data in Docker volumes
 /mysql-data
+
+# generated files
+/common/files/packing-slips
+/common/files/shipping-labels
+/common/files/bulk-result
