--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
             - docker-php-ext-install soap
             - docker-php-ext-install zip
             - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+            - composer global require "fxp/composer-asset-plugin"
             - composer install
             - composer install --no-dev -o
             - zip -r build.zip . -x *.git* *tests* *vagrant*
