--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "codemix/yii2-localeurls": "^1.7",
         "dektrium/yii2-user": "^0.9.14",
         "yiisoft/yii2-queue": "^2.3",
-        "setasign/fpdf": "^1.8"
+        "setasign/fpdf": "^1.8",
+        "cgsmith/yii2-stripe": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
