--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,16 @@ services:
       # Mount source-code for development
       - ./:/app
 
+  shopify:
+    build: shopify
+    ports:
+      - 30004:80
+    volumes:
+      # Re-use local composer cache via host-volume
+      - ~/.composer-docker/cache:/root/.composer/cache:delegated
+      # Mount source-code for development
+      - ./:/app
+
   mysql:
     image: mysql:5.7
     environment:
