--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "yiisoft/yii2-queue": "^2.3",
         "setasign/fpdf": "^1.8",
         "cgsmith/yii2-stripe": "dev-master",
-        "serzh/amazon-mws-merchant-fulfillment": "^1.0"
+        "serzh/amazon-mws-merchant-fulfillment": "^1.0",
+        "phpclassic/php-shopify": "^1.1",
+        "osiset/basic-shopify-api": "^9.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
