--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,8 +1,10 @@
-image: php:7.4.9
+image: php:7.4
 pipelines:
   branches:
     master:
       - step:
+          caches:
+            - composer
           name: Install OS dependencies, run PHPUnit, create BUILD
           script:
             - apt-get update && apt-get install -y unzip git libxml2-dev zlib1g-dev libzip-dev zip
