--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "cgsmith/yii2-stripe": "dev-master",
         "serzh/amazon-mws-merchant-fulfillment": "^1.0",
         "osiset/basic-shopify-api": "^9.1",
-        "yii2tech/csv-grid": "^1.0"
+        "yii2tech/csv-grid": "^1.0",
+        "bp-sys/yii2-aws-s3": "~2.0",
+        "bilberrry/yii2-digitalocean-spaces": "^0.1.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
