--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4.0|^8.0",
+        "php": "^8.0",
         "yiisoft/yii2": "~2.0.28",
         "yiisoft/yii2-bootstrap": "~2.0.10",
         "yiisoft/yii2-swiftmailer": "~2.1.0",
