--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,10 @@
         "yiisoft/yii2-faker": "~2.0.0",
         "codeception/verify": "~0.3.1",
         "codeception/codeception": "^4.1",
-        "codeception/module-phpbrowser": "^1.0.0",
-        "codeception/module-asserts": "^1.0.0"
+        "codeception/module-phpbrowser": "^1.0",
+        "codeception/module-asserts": "^1.0.0",
+        "codeception/module-yii2": "^1.1",
+        "codeception/module-filesystem": "^1.0"
     },
     "config": {
         "process-timeout": 1800,
