--- a/frontend/tests/acceptance.suite.yml
+++ b/frontend/tests/acceptance.suite.yml
@@ -3,11 +3,10 @@
 # Suite for acceptance tests.
 # Perform tests in browser using the WebDriver or PhpBrowser.
 # If you need both WebDriver and PHPBrowser tests - create a separate suite.
-
+suite_namespace: frontend\tests\acceptance
 actor: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser:
             url: http://localhost:30000/
-        - \Helper\Acceptance
 step_decorators: ~        
