--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "bp-sys/yii2-aws-s3": "~2.0",
         "bilberrry/yii2-digitalocean-spaces": "^0.1.2",
       "ext-json": "*",
-        "yiisoft/yii2-httpclient": "*"
+        "yiisoft/yii2-httpclient": "*",
+        "zhuravljov/yii2-queue-monitor": "^0.3.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
