--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "2amigos/2fa-library": "^2.0",
         "2amigos/qrcode-library": "^2.0",
         "frostealth/yii2-aws-s3": "~2.0",
-        "league/csv": "^9.8"
+        "league/csv": "^9.8",
+        "league/flysystem-ftp": "^3.0",
+        "nesbot/carbon": "^2.64"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
