Allow reporting by a list of order numbers
fixes #86

--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -7,4 +7,9 @@ modules:
     enabled:
         - Asserts
         - \Helper\Unit
+        #- Db
+        # Yii2 module must be loaded after Db module to make sure fixtures are not overwritten by Db dump
+        - Yii2:
+            configFile: 'common/config/test-local.php'
+            transaction: false
     step_decorators: ~        
