--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,6 @@
-FROM cgsmith105/yii2-php:8.0-apache
+FROM yiisoftware/yii2-php:8.0-apache
 
 # Change document root for Apache
 RUN sed -i -e 's|/app/web|/app/api/web|g' /etc/apache2/sites-available/000-default.conf
+
+RUN echo "xdebug.idekey=shipwise_api" >> /usr/local/etc/php/conf.d/xdebug.ini
