--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -8,6 +8,8 @@ actor: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser:
-            url: http://localhost:30000/
+            # uncomment localhost:30000 if you want to run tests outside of docker
+            #url: http://localhost:30000/
+            url: http://frontend:80/
         - \Helper\Acceptance
 step_decorators: ~        
