--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -27,7 +27,7 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Start docker-compose
-      run: make docker-up vendor/autoload.php
+      run: make docker-up
 
     - name: Validate composer.json and composer.lock
       run: make lint
