--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -23,8 +23,8 @@ jobs:
       with:
         path: vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
+#        restore-keys: |
+#          ${{ runner.os }}-php-
 
     - name: Start docker-compose
       run: make docker-up
