--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -22,9 +22,9 @@ jobs:
       uses: actions/cache@v3
       with:
         path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-#        restore-keys: |
-#          ${{ runner.os }}-php-
+        key: ${{ runner.os }}-php-${{ hashFiles('composer.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-php-
 
     - name: Start docker-compose
       run: make docker-up
