--- a/codeception.yml
+++ b/codeception.yml
@@ -10,3 +10,9 @@ extensions:
     - Codeception\Extension\RunFailed
 coverage:
   enabled: true
+
+modules:
+  config:
+    Yii2:
+#      configFile: '@app/config/test.php'
+      configFile: 'frontend/config/test.php'
