--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "codeception/module-phpbrowser": "^1.0.0",
         "codeception/module-asserts": "^1.0.0",
         "codeception/module-yii2": "^1.1",
-        "yiisoft/yii2-faker": "^2.0"
+        "yiisoft/yii2-faker": "^2.0",
+        "codeception/module-webdriver": "^2.0"
     },
     "config": {
         "process-timeout": 1800,
