--- a/docker-compose.override.dist.yml
+++ b/docker-compose.override.dist.yml
@@ -24,3 +24,16 @@ services:
   phpmyadmin:
     ports:
       - '30003:80'
+
+  selenium:
+    # image: selenium/standalone-firefox:3.141.59-iron
+    image: selenium/standalone-firefox-debug:3.141.59-iron # use the debug image to enable VNC viewer
+    expose:
+      - 4444 # selenium server
+      - 5900 # VNC, connect to  localhost:35900  to view the selenium browser in VNC, password: secret
+    #timeout 10s sh -c "while ! nc -z localhost 4444; do sleep 0.1 ; done"
+    ports:
+      - 35900:5900
+    shm_size: 2G
+    tmpfs:
+      - /tmp
