--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "codeception/module-asserts": "^1.0.0",
         "codeception/module-yii2": "^1.1",
         "yiisoft/yii2-faker": "^2.0",
-        "codeception/module-webdriver": "^2.0"
+        "codeception/module-webdriver": "^2.0",
+        "codeception/module-db": "^2.1"
     },
     "config": {
         "process-timeout": 1800,
