Added separate DB for testing

--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -9,7 +9,8 @@ actor: FunctionalTester
 bootstrap: bootstrap.php
 modules:
     enabled:
-        # add a framework module here
+        - Db
+        # Yii2 module must be loaded after Db module to make sure fixtures are not overwritten by Db dump
         - Yii2
         - \Helper\Functional
     step_decorators: ~        
