--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "codemix/yii2-localeurls": "^1.7",
         "yiisoft/yii2-queue": "^2.3",
         "setasign/fpdf": "^1.8",
-        "cgsmith/yii2-stripe": "dev-master",
+        "stripe/stripe-php": "*",
         "serzh/amazon-mws-merchant-fulfillment": "^1.0",
         "osiset/basic-shopify-api": "^9.1",
         "yii2tech/csv-grid": "^1.0",
@@ -43,7 +43,8 @@
             "enabled": false
         },
         "allow-plugins": {
-            "yiisoft/yii2-composer": true
+            "yiisoft/yii2-composer": true,
+            "php-http/discovery": true
         }
     },
     "repositories": [
