--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "codeception/module-yii2": "^1.1",
         "codeception/module-asserts": "^3.0",
         "codeception/verify": "^3.0",
-        "codeception/module-phpbrowser": "^3.0"
+        "codeception/module-phpbrowser": "^3.0",
+        "vimeo/psalm": "^5.9"
     },
     "config": {
         "process-timeout": 1800,
