--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "codemix/yii2-localeurls": "^1.7",
         "yiisoft/yii2-queue": "^2.3",
         "setasign/fpdf": "^1.8",
-        "stripe/stripe-php": "*",
+        "stripe/stripe-php": "^10.12",
         "serzh/amazon-mws-merchant-fulfillment": "^1.0",
         "osiset/basic-shopify-api": "^9.1",
         "yii2tech/csv-grid": "^1.0",
